Fix expansion panel header covering content

--- a/projects/frontend-theme/theming/styles/components/panels.scss
+++ b/projects/frontend-theme/theming/styles/components/panels.scss
@@ -12,3 +12,7 @@ mat-expansion-panel-header {
     padding: 1rem 2rem !important;
     margin: -1rem 0 !important;
 }
+
+.mat-expansion-panel-body {
+    padding-top: 1.25rem;
+}
